<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_enable_summary"
        android:title="@string/pref_enable" />

    <androidx.preference.SwitchPreferenceCompat
        android:icon="@drawable/ic_cake"
        android:key="@string/pref_enabled_key"
        android:persistent="false"
        android:title="@string/pref_enable_switch" />

    <androidx.preference.Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_contacts_summary"
        android:title="@string/pref_contacts" />

    <androidx.preference.Preference
        android:icon="@drawable/ic_contacts"
        android:key="@string/pref_contacts_key"
        android:persistent="false"
        android:title="@string/pref_contacts_open" />

    <androidx.preference.Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_calendar_summary"
        android:title="@string/pref_calendar" />

    <androidx.preference.Preference
        android:icon="@drawable/ic_calendar"
        android:key="@string/pref_calendar_key"
        android:persistent="false"
        android:title="@string/pref_calendar_open" />

    <androidx.preference.Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_sync_summary"
        android:title="@string/pref_sync" />

    <androidx.preference.Preference
        app:icon="@drawable/ic_sync"
        android:key="@string/pref_force_sync_key"
        android:persistent="false"
        android:title="@string/pref_force_sync" />

</androidx.preference.PreferenceScreen>
